# routes/api.php
@@ -19,5 +19,6 @@ Route::group(['namespace'=>'Api\V1', 'middleware' => 'cors'], function(){
     Route::get('categories', 'CategoryController@getList');
 
     Route::post('orders', 'OrderController@storeOrder');
+    Route::get('orders', 'OrderController@getList');
 });
 
